# Pytorch-Sparse-Linalg-torch-amgx.cg.bicg.gmres

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  test_sparse_gpu.py  test_torch_sparse_and_torch_amgx.py  test_torch_sparse_only_gpu.py  torch_sparse_test_result.md  verify_pyamgx_installation.py
.github/workflows/: ci.yml
FVM_example/: FVM_Staggered_uniform_scipy_tonysaad_origin.py  FVM_Staggered_uniform_torch_optimized.py  cavity_flow.py  main_cavity_flow.py
FVM_example/LDC_by_torchsp/: FVM_Staggered_uniform_torch_optimized.py  README.md  ldc_solver.py  ldc_solver_common.py  ldc_solver_module_a.py  ldc_solver_module_b.py  ldc_solver_module_c.py  ldc_solver_module_d.py
examples/: basic_usage.py
src/: run.py  run_all_tests.py  run_full_benchmark.py  torch_sparse_linalg.py  torch_tree_util.py
src/docs/: installation.md  modules.md
src/pytorch_sparse_solver/: __init__.py  solver.py
src/pytorch_sparse_solver/module_a/: __init__.py  torch_sparse_linalg.py
src/pytorch_sparse_solver/module_b/: __init__.py  torch_amgx.py
src/pytorch_sparse_solver/module_c/: __init__.py  cudss_solver.py
src/pytorch_sparse_solver/tests/: __init__.py  benchmark.py  test_gpu_validation.py  test_module_a.py  test_module_b.py  test_module_c.py  test_unified.py
src/pytorch_sparse_solver/utils/: __init__.py  availability.py  matrix_utils.py
test_report/: torch_amgx_test_result.md  torch_sparse_test_result.md
